Authorization and authentication and empty dashboard

--- a/src/AdminWeb/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/AdminWeb/src/app/layout/default-layout/default-header/default-header.component.html
@@ -88,7 +88,7 @@
       </li>
       <li></li>
       <li>
-        <a cDropdownItem routerLink="/users/{{ authManager.token.id }}">
+        <a cDropdownItem routerLink="/web/users/{{ authManager.token.id }}">
           <svg cIcon class="me-2" name="cilUser"></svg>
           Můj účet
         </a>
