--- a/src/AdminWeb/src/app/layout/default-layout/default-layout.component.html
+++ b/src/AdminWeb/src/app/layout/default-layout/default-layout.component.html
@@ -27,7 +27,7 @@
   >
     <c-sidebar-nav
       #overflow
-      [navItems]="[]"
+      [navItems]="menuItems"
       dropdownMode="close"
       compact
     ></c-sidebar-nav>
