Custom data table for simple presentations

--- a/src/AdminWeb/src/app/components/loading/loading.component.html
+++ b/src/AdminWeb/src/app/components/loading/loading.component.html
@@ -1,5 +1,5 @@
 @if(visible()) {
-<div class="d-flex align-items-center">
+<div class="d-flex align-items-center justify-content-center">
   @if(small()) {
   <c-spinner variant="grow" size="sm"></c-spinner>
 
