--- a/src/AdminWeb/src/app/components/data-table/simple-data-table.component.html
+++ b/src/AdminWeb/src/app/components/data-table/simple-data-table.component.html
@@ -5,46 +5,66 @@
   [striped]="defs().table?.striped ?? false"
   [ngClass]="defs().table?.tableClasses ?? []"
 >
-  @if(columnsCount() > 0) {
-  <thead class="text-nowrap text-truncate">
-    <tr>
-      @for(field of headerFields(); track field) { @let column =
-      defs().columns[field];
-      <th
-        [ngClass]="(column.headerClasses ?? []).concat(['bg-body-tertiary'])"
-        [width]="column.width ?? ''"
-      >
-        @if(column.headerText) {
-        {{ column.headerText }}
-        } @else if(column.template) {
-        <ng-container *ngTemplateOutlet="column.template"></ng-container>
+  @if (columnsCount() > 0) {
+    <thead class="text-nowrap text-truncate">
+      <tr>
+        @for (field of headerFields(); track field) {
+          @let column = defs().columns[field];
+          <th
+            [ngClass]="
+              (column.headerClasses ?? []).concat(['bg-body-tertiary'])
+            "
+            [width]="column.width ?? ''"
+          >
+            @if (column.headerText) {
+              {{ column.headerText }}
+            } @else if (column.template) {
+              <ng-container *ngTemplateOutlet="column.template"></ng-container>
+            }
+          </th>
         }
-      </th>
-      }
-    </tr>
-  </thead>
+      </tr>
+    </thead>
   }
 
   <tbody>
-    @if(dataSource | withLoading | async; as response) { @if(response.loading) {
-    <tr>
-      <td [attr.colspan]="columnsCount()">
-        <app-loading [small]="true" />
-      </td>
-    </tr>
-    } @else { @for(row of response.value; track $index) {
-    <tr>
-      @if(isIndexColumn()) {
-      <td>{{ $index + 1 }}.</td>
-      } @for(field of dataFields(); track field) { @let column =
-      defs().columns[field];
-      <td [ngClass]="column.dataClasses ?? []">
-        {{
-          column.valueFormatter ? column.valueFormatter(row[field]) : row[field]
-        }}
-      </td>
+    @if (dataSource | withLoading | async; as response) {
+      @if (response.loading) {
+        <tr>
+          <td [attr.colspan]="columnsCount()">
+            <app-loading [small]="true" />
+          </td>
+        </tr>
+      } @else {
+        @if (response.value.length == 0) {
+          <tr>
+            <td [attr.colspan]="columnsCount()">
+              <svg cIcon name="cilWarning" size="md"></svg>
+              Nebyly načteny žádné data.
+            </td>
+          </tr>
+        } @else {
+          @for (row of response.value; track $index) {
+            <tr>
+              @if (isIndexColumn()) {
+                <td>{{ $index + 1 }}.</td>
+              }
+
+              @for (field of dataFields(); track field) {
+                @let column = defs().columns[field];
+
+                <td [ngClass]="column.dataClasses ?? []">
+                  {{
+                    column.valueFormatter
+                      ? column.valueFormatter(row[field])
+                      : row[field]
+                  }}
+                </td>
+              }
+            </tr>
+          }
+        }
       }
-    </tr>
-    } } }
+    }
   </tbody>
 </table>
