Smaller table in the top heavy operations

--- a/src/AdminWeb/src/app/components/data-table/simple-data-table.component.html
+++ b/src/AdminWeb/src/app/components/data-table/simple-data-table.component.html
@@ -4,6 +4,7 @@
   [responsive]="defs().table?.responsive ?? true"
   [striped]="defs().table?.striped ?? false"
   [ngClass]="defs().table?.tableClasses ?? []"
+  [small]="defs().table?.small ?? false"
 >
   @if (columnsCount() > 0) {
     <thead class="text-nowrap text-truncate">
