--- a/src/AdminWeb/src/app/views/dashboard/dashboard.component.html
+++ b/src/AdminWeb/src/app/views/dashboard/dashboard.component.html
@@ -63,6 +63,12 @@
   }
 }
 
+<c-row>
+  <c-col *hasPermission="'UserMeasures(Admin)'">
+    <app-user-measures></app-user-measures>
+  </c-col>
+</c-row>
+
 <ng-template
   #dashboardWidget
   let-title="title"
