--- a/src/AdminWeb/src/app/views/dashboard/components/user-measures/user-measures.component.html
+++ b/src/AdminWeb/src/app/views/dashboard/components/user-measures/user-measures.component.html
@@ -6,6 +6,6 @@
     </div>
   </c-card-header>
   <c-card-body>
-    <app-simple-data-table [defs]="tableDefs"></app-simple-data-table>
+    <app-simple-data-table [defs]="tableDefs" />
   </c-card-body>
 </c-card>
