--- a/src/AdminWeb/src/app/components/data-table/simple-data-table.component.html
+++ b/src/AdminWeb/src/app/components/data-table/simple-data-table.component.html
@@ -37,7 +37,7 @@
           </td>
         </tr>
       } @else {
-        @if (response.value.length == 0) {
+        @if (response.value!.length == 0) {
           <tr>
             <td [attr.colspan]="columnsCount()">
               <svg cIcon name="cilWarning" size="md"></svg>
@@ -49,7 +49,15 @@
             <tr>
               @for (column of row; track $index) {
                 <td [ngClass]="column.columnDef.dataClasses ?? []">
-                  {{ column.value | async }}
+                  @if (column.value | async; as valueMapping) {
+                    @if (isValueString(valueMapping)) {
+                      {{ valueMapping }}
+                    } @else {
+                      <ng-container
+                        *ngTemplateOutlet="$any(valueMapping)"
+                      ></ng-container>
+                    }
+                  }
                 </td>
               }
             </tr>
