Async lookup renderer and integrated ag-grid into user measures

--- a/src/AdminWeb/src/app/views/dashboard/components/user-measures/user-measures.component.html
+++ b/src/AdminWeb/src/app/views/dashboard/components/user-measures/user-measures.component.html
@@ -6,6 +6,6 @@
     </div>
   </c-card-header>
   <c-card-body>
-    <app-simple-data-table [defs]="tableDefs" />
+    <app-ag-grid [gridOptions]="gridOptions" [dataSource]="$getDashboard" [height]="'300px'" />
   </c-card-body>
 </c-card>
