--- a/src/AdminWeb/src/app/views/dashboard/dashboard.component.html
+++ b/src/AdminWeb/src/app/views/dashboard/dashboard.component.html
@@ -73,9 +73,13 @@
   </c-col>
 </c-row>
 
-<c-row>
-  <c-col *hasPermission="'AuditLog(Admin)'" md="5">
+<c-row *hasPermission="'AuditLog(Admin)'">
+  <c-col md="5">
     <app-today-avg-times />
+  </c-col>
+
+  <c-col>
+    <app-jobs />
   </c-col>
 </c-row>
 
