--- a/src/AdminWeb/src/app/views/dashboard/service-detail/service-detail.component.html
+++ b/src/AdminWeb/src/app/views/dashboard/service-detail/service-detail.component.html
@@ -30,7 +30,7 @@
               <ng-container
                 [ngTemplateOutlet]="detailInfoRow"
                 [ngTemplateOutletContext]="{
-                  title: 'URL',
+                  key: 'URL',
                   value: response.value.url,
                 }"
               />
@@ -38,7 +38,7 @@
               <ng-container
                 [ngTemplateOutlet]="detailInfoRow"
                 [ngTemplateOutletContext]="{
-                  title: 'Využitá paměť',
+                  key: 'Využitá paměť',
                   value: response.value.usedMemory | filesize,
                 }"
               />
@@ -46,7 +46,7 @@
               <ng-container
                 [ngTemplateOutlet]="detailInfoRow"
                 [ngTemplateOutletContext]="{
-                  title: 'Uptime',
+                  key: 'Uptime',
                   value: response.value.uptime | timespan,
                 }"
               />
@@ -54,7 +54,7 @@
               <ng-container
                 [ngTemplateOutlet]="detailInfoRow"
                 [ngTemplateOutletContext]="{
-                  title: 'CPU čas',
+                  key: 'CPU čas',
                   value: response.value.cpuTime | timespan,
                 }"
               />
@@ -62,7 +62,7 @@
               <ng-container
                 [ngTemplateOutlet]="detailInfoRow"
                 [ngTemplateOutletContext]="{
-                  title: 'Počet požadavků',
+                  key: 'Počet požadavků',
                   value: response.value.requestsCount | spacedNumber,
                 }"
               />
@@ -70,7 +70,7 @@
               <ng-container
                 [ngTemplateOutlet]="detailInfoRow"
                 [ngTemplateOutletContext]="{
-                  title: 'Měřeno od',
+                  key: 'Měřeno od',
                   value:
                     response.value.measuredFrom | date: 'dd. MM. yyyy HH:mm:ss',
                 }"
@@ -79,22 +79,19 @@
           </c-card>
         </c-col>
 
-        @if (Object.keys(response.value.additionalData).length > 0) {
+        @if ((response.value.additionalData | dictToList).length > 0) {
           <c-col>
             <c-card>
               <c-card-body>
                 <h5 cCardTitle>Provozní data</h5>
 
                 @for (
-                  key of Object.keys(response.value.additionalData);
-                  track key
+                  row of response.value.additionalData | dictToList;
+                  track $index
                 ) {
                   <ng-container
                     [ngTemplateOutlet]="detailInfoRow"
-                    [ngTemplateOutletContext]="{
-                      title: key,
-                      value: response.value.additionalData[key],
-                    }"
+                    [ngTemplateOutletContext]="row"
                   />
                 }
               </c-card-body>
@@ -103,19 +100,33 @@
         }
       </c-row>
 
-      <app-ag-grid
-        [gridOptions]="endpointsGrid"
-        [dataSource]="of(response.value.endpoints)"
-        [height]="'300px'"
-      />
+      <div class="mb-3">
+        <app-ag-grid
+          [gridOptions]="endpointsGrid"
+          [dataSource]="response.value.endpoints | observable"
+          [height]="'300px'"
+        />
+      </div>
+
+      @if (response.value.databaseStatistics) {
+        <div class="mb-3">
+          <app-ag-grid
+            [gridOptions]="dbStatsGrid"
+            [dataSource]="
+              response.value.databaseStatistics | dictToList | observable
+            "
+            height="300px"
+          />
+        </div>
+      }
     }
   </div>
 }
 
-<ng-template #detailInfoRow let-title="title" let-value="value">
+<ng-template #detailInfoRow let-key="key" let-value="value">
   <c-row>
     <c-col>
-      <b>{{ title }}:</b>
+      <b>{{ key }}:</b>
     </c-col>
     <c-col> {{ value }}</c-col>
   </c-row>
