AG Grid localization, service detail-operations, simplified ag grid initialization

--- a/src/AdminWeb/src/app/components/ag-grid/ag-grid.component.html
+++ b/src/AdminWeb/src/app/components/ag-grid/ag-grid.component.html
@@ -1,6 +1,6 @@
 <ag-grid-angular
   class="ag-theme-balham"
-  [gridOptions]="gridOptions()"
+  [gridOptions]="options()"
   [style.width]="width()"
   [style.height]="height()"
   [rowData]="dataSource() | async"
