Fixed ag grid in the dark mode

--- a/src/AdminWeb/src/app/components/ag-grid/ag-grid.component.html
+++ b/src/AdminWeb/src/app/components/ag-grid/ag-grid.component.html
@@ -1,5 +1,5 @@
 <ag-grid-angular
-  class="ag-theme-balham"
+  [ngClass]="colorMode() == 'dark' ? 'ag-theme-balham-dark' : 'ag-theme-balham'"
   [gridOptions]="options()"
   [style.width]="width()"
   [style.height]="height()"
