--- a/src/AdminWeb/src/app/views/dashboard/components/interactions/interactions.component.html
+++ b/src/AdminWeb/src/app/views/dashboard/components/interactions/interactions.component.html
@@ -1,10 +1,12 @@
 <c-card class="mb-3">
-  <c-card-header class="border-bottom-0">
-    <div class="d-flex align-items-center">
-      <svg cIcon name="cilTerminal" size="xxl" class="me-2"></svg>
-      <h4 cCardTitle class="mb-0 fw-normal">Příkazy</h4>
-    </div>
-  </c-card-header>
+  <app-card-header
+    class="border-bottom-0"
+    icon="cilTerminal"
+    [size]="'lg'"
+    [title]="'Příkazy'"
+    [hideToggleVisibility]="true"
+  />
+
   <c-card-body>
     <app-ag-grid
       [gridOptions]="gridOptions"
