--- a/src/AdminWeb/src/app/views/dashboard/components/user-measures/user-measures.component.html
+++ b/src/AdminWeb/src/app/views/dashboard/components/user-measures/user-measures.component.html
@@ -1,11 +1,16 @@
 <c-card class="mb-3">
-  <c-card-header>
-    <div class="d-flex align-items-center">
-      <svg cIcon name="cilShieldAlt" size="xxl" class="me-2"></svg>
-      <h4 cCardTitle class="mb-0 fw-normal">Uživatelská opatření</h4>
-    </div>
-  </c-card-header>
+  <app-card-header
+    icon="cilShieldAlt"
+    size="lg"
+    [title]="'Uživatelská opatření'"
+    [hideToggleVisibility]="true"
+  />
+
   <c-card-body>
-    <app-ag-grid [gridOptions]="gridOptions" [dataSource]="$getDashboard" [height]="'300px'" />
+    <app-ag-grid
+      [gridOptions]="gridOptions"
+      [dataSource]="$getDashboard"
+      [height]="'300px'"
+    />
   </c-card-body>
 </c-card>
