Bug fixes and points transaction list

--- a/src/AdminWeb/src/app/components/ag-grid/renderers/async-lookup-cell-renderer/async-lookup-cell-cenderer.component.html
+++ b/src/AdminWeb/src/app/components/ag-grid/renderers/async-lookup-cell-renderer/async-lookup-cell-cenderer.component.html
@@ -1,7 +1,11 @@
 @if (params) {
   <div>
     @if (source) {
-      {{ source | async }}
+      @if (source | async; as asyncResponse) {
+        {{ asyncResponse }}
+      } @else {
+        <app-loading [small]="true" [showText]="false" [center]="false" />
+      }
     } @else {
       {{ params.value }}
     }
