--- a/src/AdminWeb/src/scss/styles.scss
+++ b/src/AdminWeb/src/scss/styles.scss
@@ -4,8 +4,7 @@
 @import "@coreui/coreui/scss/coreui";
 @import "bootstrap/dist/css/bootstrap.min.css";
 
-// AG Grid
 @import 'ag-grid';
-
+@import 'ng-select';
 @import "theme";
 @import "custom";
