--- a/src/AdminWeb/src/app/views/points/leaderboard/points-leaderboard.component.html
+++ b/src/AdminWeb/src/app/views/points/leaderboard/points-leaderboard.component.html
@@ -1,5 +1,29 @@
 <c-card class="mb-3">
   <app-card-header #header icon="cilSearch" title="Vyhledávání" />
 
-  <c-card-body visibility [isVisible]="header.bodyVisible()" />
+  <c-card-body visibility [isVisible]="header.bodyVisible()">
+    <form [formGroup]="form" cForm>
+      <div>
+        <label cLabel for="guildId">Server</label>
+        @if (guildLookupSource$ | withLoading | async; as guildLookup) {
+          <ng-select
+            ngSelector
+            [loading]="guildLookup.loading"
+            [items]="guildLookup.value"
+            bindLabel="name"
+            bindValue="id"
+            formControlName="guildId"
+          />
+        }
+      </div>
+    </form>
+  </c-card-body>
 </c-card>
+
+<div class="mb-3">
+  <app-ag-grid
+    [gridOptions]="gridOptions"
+    [dataSource]="leaderboardSource$"
+    height="800px"
+  />
+</div>
