Points transactions filter

--- a/src/AdminWeb/src/scss/_ng-select.scss
+++ b/src/AdminWeb/src/scss/_ng-select.scss
@@ -20,7 +20,7 @@
     & .ng-option {
       background-color: var(--cui-body-bg) !important;
 
-      & .ng-option-label {
+      & * {
         color: #fff;
       }
     }
