Fixed card header color in the dark mode and removed useless code

--- a/src/AdminWeb/src/app/components/card-header/card-header.component.html
+++ b/src/AdminWeb/src/app/components/card-header/card-header.component.html
@@ -22,9 +22,10 @@
   @if (!hideToggleVisibility()) {
     <button
       cButton
-      class="btn-link p-0"
+      class="p-0 text-decoration-underline"
       [color]="'transparent'"
       (click)="bodyVisible.set(!bodyVisible())"
+      [variant]="'ghost'"
     >
       {{ bodyVisible() ? "Skrýt" : "Zobrazit" }}
     </button>
